--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
   <link rel="preload" href="assets/lib/bootstrap/bootstrap.min.css" as="style">
   <link rel="preload" href="assets/lib/animate.min.css" as="style">
-  <link rel="preload" href="assets/styles/styles.css" as="style"/>
+  <link rel="preload" href="assets/styles/css/bundle.min.css" as="style"/>
   <link rel="stylesheet" href="assets/lib/bootstrap/bootstrap.min.css">
   <link rel="stylesheet" href="assets/lib/animate.min.css">
-  <link rel="stylesheet" href="assets/styles/styles.css" />
+  <link rel="stylesheet" href="assets/styles/css/bundle.min.css" />
   <title>Landing title</title>
 </head>
 <body>
