--- a/index.html
+++ b/index.html
@@ -77,6 +77,26 @@
       </div>
     </div>
   </section>
+  <section id="group">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <img src="assets/images/group-larrarte.png" alt="Larrarte">
+          <h2 class="mt-5 mb-3">Potenciando al inversor uruguayo desde 1995</h2>
+          <h5>Grupo Larrarte es una empresa dedicada a la Administración de fondos de Inversión y Capitales en <br>general con más de 25 años de experiencia en el mercado. Ofrecemos soluciones a pequeños, medianos<br> y grandes inversores para diversificar y hacer crecer su capital a través de mecanismos de inversión <br>sólidos, transparentes y seguros.</h5>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section id="are-have">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+
+        </div>
+      </div>
+    </div>
+  </section>
   <footer>
     <div class="container">
       <div class="row">
