--- a/index.html
+++ b/index.html
@@ -54,24 +54,24 @@
       <div class="item">
         <img src="assets/images/banner-ganado.jpg" alt="Larrarte" class="w-100%">
         <div class="titleCarousel">
-          <h1 class="display-4">Hacé crecer tu capital<br> con rentabilidad asegurada</h1>
-          <h1 class="mb-md-5 mb-sm-3">Hasta 10% anual</h1>
+          <h1 class="display-4" style="font-weight: 600">Hacé crecer tu capital<br> con rentabilidad asegurada</h1>
+          <h1 class="mb-md-5 mb-sm-3" style="font-weight: 600">Hasta 10% anual</h1>
           <a href="#" class="btn btn-primary">Conocer más</a>
         </div>
       </div>
       <div class="item">
         <img src="assets/images/banner-ganado.jpg" alt="Larrarte" class="w-100%">
         <div class="titleCarousel">
-          <h1 class="display-4">Hacé crecer tu capital<br> con rentabilidad asegurada</h1>
-          <h1 class="mb-md-5 mb-sm-3">Hasta 10% anual</h1>
+          <h1 class="display-4" style="font-weight: 600">Hacé crecer tu capital<br> con rentabilidad asegurada</h1>
+          <h1 class="mb-md-5 mb-sm-3" style="font-weight: 600">Hasta 10% anual</h1>
           <a href="#" class="btn btn-primary">Conocer más</a>
         </div>
       </div>
       <div class="item">
         <img src="assets/images/banner-ganado.jpg" alt="Larrarte" class="w-100%">
         <div class="titleCarousel">
-          <h1 class="display-4">Hacé crecer tu capital<br> con rentabilidad asegurada</h1>
-          <h1 class="mb-md-5 mb-sm-3">Hasta 10% anual</h1>
+          <h1 class="display-4" style="font-weight: 600">Hacé crecer tu capital<br> con rentabilidad asegurada</h1>
+          <h1 class="mb-md-5 mb-sm-3" style="font-weight: 600">Hasta 10% anual</h1>
           <a href="#" class="btn btn-primary">Conocer más</a>
         </div>
       </div>
@@ -82,8 +82,8 @@
       <div class="row">
         <div class="col-12">
           <img src="assets/images/group-larrarte.png" alt="Larrarte">
-          <h2 class="mt-5 mb-3">Potenciando al inversor uruguayo desde 1995</h2>
-          <h5>Grupo Larrarte es una empresa dedicada a la Administración de fondos de Inversión y Capitales en <br>general con más de 25 años de experiencia en el mercado. Ofrecemos soluciones a pequeños, medianos<br> y grandes inversores para diversificar y hacer crecer su capital a través de mecanismos de inversión <br>sólidos, transparentes y seguros.</h5>
+          <h2 class="mt-5 mb-3" style="font-weight: 700">Potenciando al inversor uruguayo desde 1995</h2>
+          <h5 style="font-weight: 400">Grupo Larrarte es una empresa dedicada a la Administración de fondos de Inversión y Capitales en <br class="d-none d-lg-block">general con más de 25 años de experiencia en el mercado. Ofrecemos soluciones a pequeños, medianos<br class="d-none d-lg-block"> y grandes inversores para diversificar y hacer crecer su capital a través de mecanismos de inversión <br class="d-none d-lg-block">sólidos, transparentes y seguros.</h5>
         </div>
       </div>
     </div>
@@ -92,6 +92,32 @@
     <div class="container">
       <div class="row">
         <div class="col-12">
+          <div class="gif">
+            <div class="item">
+              <img src="assets/images/farm.svg" alt="Larrarte">
+              <h4>25 años <br>de experiencia</h4>
+            </div>
+            <div class="item">
+              <img src="assets/images/investors.svg" alt="Larrarte">
+              <h4>Más de 1.000 <br>inversores</h4>
+            </div>
+            <div class="item">
+              <img src="assets/images/farm.svg" alt="Larrarte">
+              <h4>3 cabañas <br>propias</h4>
+            </div>
+            <div class="item">
+              <img src="assets/images/vaadin.svg" alt="Larrarte">
+              <h4>25.000 hás <br>de producción</h4>
+            </div>
+            <div class="item">
+              <img src="assets/images/vaadin.svg" alt="Larrarte">
+              <h4>+20.000 cabezas <br>de Brangus</h4>
+            </div>
+            <div class="item">
+              <img src="assets/images/vaadin.svg" alt="Larrarte">
+              <h4>+15.000 cabezas <br>de Texel</h4>
+            </div>
+          </div>
 
         </div>
       </div>
