--- a/index.html
+++ b/index.html
@@ -123,6 +123,30 @@
       </div>
     </div>
   </section>
+  <section id="investment">
+    <div class="container-fluid p-5">
+      <div class="row gap-4 justify-content-center">
+        <div class="col-md-3 col-12 item1">
+          <h2>PGA</h2>
+          <h5>Programa Ganadero Artigas</h5>
+          <h3 class="mb-4">Rentabilidad asegurada <br>del 8 a 10% anual</h3>
+          <a href="#" class="btn btn-primary">Conocer más</a>
+        </div>
+        <div class="col-md-3 col-12 item2">
+          <h2>Negocios Forestales</h2>
+          <h5>Inversiones en campos forestados<br> para producción de celulosa.</h5>
+          <h3 class="mb-4">Rentabilidad del<br> 7 a 12% anual</h3>
+          <a href="#" class="btn btn-primary">Conocer más</a>
+        </div>
+        <div class="col-md-3 col-12 item3">
+          <h2>Construcción</h2>
+          <h5>Fideicomisos y desarrollos <br>inmobiliarios</h5>
+          <h3 class="mb-4">Rentabilidad hasta<br> del 9% anual</h3>
+          <a href="#" class="btn btn-primary">Conocer más</a>
+        </div>
+      </div>
+    </div>
+  </section>
   <footer>
     <div class="container">
       <div class="row">
