--- a/index.html
+++ b/index.html
@@ -125,24 +125,39 @@
   </section>
   <section id="investment">
     <div class="container-fluid p-5">
-      <div class="row gap-4 justify-content-center">
-        <div class="col-md-3 col-12 item1">
-          <h2>PGA</h2>
-          <h5>Programa Ganadero Artigas</h5>
-          <h3 class="mb-4">Rentabilidad asegurada <br>del 8 a 10% anual</h3>
-          <a href="#" class="btn btn-primary">Conocer más</a>
-        </div>
-        <div class="col-md-3 col-12 item2">
-          <h2>Negocios Forestales</h2>
-          <h5>Inversiones en campos forestados<br> para producción de celulosa.</h5>
-          <h3 class="mb-4">Rentabilidad del<br> 7 a 12% anual</h3>
-          <a href="#" class="btn btn-primary">Conocer más</a>
-        </div>
-        <div class="col-md-3 col-12 item3">
-          <h2>Construcción</h2>
-          <h5>Fideicomisos y desarrollos <br>inmobiliarios</h5>
-          <h3 class="mb-4">Rentabilidad hasta<br> del 9% anual</h3>
-          <a href="#" class="btn btn-primary">Conocer más</a>
+      <div class="row justify-content-center">
+        <h2 class="mb-5" style="color: #373948; font-weight: 700">Te ofrecemos diferentes mecanismos de inversión para <br>diversificar tu capital</h2>
+        <div class="col-12 grid-investment">
+          <div class="PGA investment">
+            <div class="itop">
+              <h2>PGA</h2>
+              <h5>Programa Ganadero Artigas</h5>
+            </div>
+            <div class="ibottom">
+              <h3 class="mb-4">Rentabilidad asegurada <br>del 8 a 10% anual</h3>
+            </div>
+            <a href="#" class="btn btn-primary">Conocer más</a>
+          </div>
+          <div class="Negocios investment">
+            <div class="itop">
+              <h2>Negocios Forestales</h2>
+              <h5>Inversiones en campos forestados<br> para producción de celulosa.</h5>
+            </div>
+            <div class="ibottom">
+              <h3 class="mb-4">Rentabilidad del<br> 7 a 12% anual</h3>
+            </div>
+            <a href="#" class="btn btn-primary">Conocer más</a>
+          </div>
+          <div class="Construccion investment">
+            <div class="itop">
+              <h2>Construcción</h2>
+              <h5>Fideicomisos y desarrollos <br>inmobiliarios</h5>
+            </div>
+            <div class="ibottom">
+              <h3 class="mb-4">Rentabilidad hasta<br> del 9% anual</h3>
+            </div>
+            <a href="#" class="btn btn-primary">Conocer más</a>
+          </div>
         </div>
       </div>
     </div>
