--- a/index.html
+++ b/index.html
@@ -162,6 +162,44 @@
       </div>
     </div>
   </section>
+  <section id="managementI">
+    <div class="container">
+      <div class="row">
+        <div class="col-12 managementI">
+          <h3>Otros negocios</h3>
+          <h1 class="display-6">Gestión de Negocios Ganaderos</h1>
+          <div class="giftransparent">
+            <div class="ranchers">
+              <img src="assets/images/administracion.svg" alt="Larrarte">
+              <h4>Administración</h4>
+            </div>
+            <div class="ranchers">
+              <img src="assets/images/remate.svg" alt="Larrarte">
+              <h4>Remates</h4>
+            </div>
+            <div class="ranchers">
+              <img src="assets/images/inmobiliaria.svg" alt="Larrarte">
+              <h4>Inmobiliaria Agro</h4>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <a href="#" class="btn btn-primary">Conocer más</a>
+  </section>
+  <section id="managementII">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-7 col-12 textm">
+          <h1>Estás a un paso de tener tu plan <br class="d-none d-lg-block">de inversión segura y diversificada.</h1>
+          <h4>Diseñado a medida de tus necesidades</h4>
+        </div>
+        <div class="col-md-6 col-12">
+          <img src="assets/images/inversion.png" alt="Larrarte">
+        </div>
+      </div>
+    </div>
+  </section>
   <footer>
     <div class="container">
       <div class="row">
