--- a/index.html
+++ b/index.html
@@ -20,16 +20,58 @@
       <div class="row">
         <div class="col-12 col-nav">
           <nav class="navbar navbar-expand-lg navbar-light">
+            <a class="navbar-brand" href="#"><img src="assets/images/Component2.svg" alt="Larrarte"></a>
             <div class="left">
-              <a class="navbar-brand" href="#">Navbar</a>
+
               <div class="right">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                   <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">Inversiones</a>
+
+                    <li class="nav-item dropdown">
+                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Inversiones</a>
+                      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <div class="grid-menu">
+                          <div class="imenu"><span class="dropdown-item" href="#">
+                            <div class="mimg">
+                              <img src="assets/images/menu1.png" alt="Larrarte">
+                            </div>
+                            <div class="mtext">
+                              <h6>PGA<br><strong>Rentabilidad<br>asegurada</strong> hasta 10% anual</h6>
+                              <a href="#">Conocé más</a>
+                            </div>
+                          </span></div>
+                          <div class="imenu"><span class="dropdown-item" href="#">
+                            <div class="mimg">
+                              <img src="assets/images/menu3.png" alt="Larrarte">
+                            </div>
+                            <div class="mtext">
+                              <h6>Forestales<br><strong>Rentabilidad<br></strong>de 7% a 12%<br>anual</h6>
+                              <a href="#">Conocé más</a>
+                            </div>
+                          </span></div>
+                          <div class="imenu"><span class="dropdown-item" href="#">
+                            <div class="mimg">
+                              <img src="assets/images/menu2.png" alt="Larrarte">
+                            </div>
+                            <div class="mtext">
+                              <h6><strong>Negocios Ganaderosz<br></strong>Administración, <br>Remates, Inmobiliaria</h6>
+                              <a href="#">Conocé más</a>
+                            </div>
+                          </span></div>
+                          <div class="imenu"><span class="dropdown-item" href="#">
+                            <div class="mimg">
+                              <img src="assets/images/menu4.png" alt="Larrarte">
+                            </div>
+                            <div class="mtext">
+                              <h6><strong>Negocios Inmobiliarios<br></strong> hasta 9% anual<br>larrarteurbano.com.uy</h6>
+                              <a href="#">Conocé más</a>
+                            </div>
+                          </span></div>
+                        </div>
+                      </div>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="#">Nosotros</a>
@@ -52,26 +94,26 @@
   <section id="image-carousel">
     <div class="owl-carousel owl-theme">
       <div class="item">
-        <img src="assets/images/banner-ganado.jpg" alt="Larrarte" class="w-100%">
+        <img src="assets/images/header.png" alt="Larrarte">
         <div class="titleCarousel">
-          <h1 class="display-4" style="font-weight: 600">Hacé crecer tu capital<br> con rentabilidad asegurada</h1>
-          <h1 class="mb-md-5 mb-sm-3" style="font-weight: 600">Hasta 10% anual</h1>
+          <h1 class="display-4">Hacé crecer tu capital<br class="d-none d-md-block"> con rentabilidad asegurada</h1>
+          <h1 class="mb-md-5 mb-sm-3">Hasta 10% anual</h1>
           <a href="#" class="btn btn-primary">Conocer más</a>
         </div>
       </div>
       <div class="item">
-        <img src="assets/images/banner-ganado.jpg" alt="Larrarte" class="w-100%">
+        <img src="assets/images/header.png" alt="Larrarte" class="w-100%">
         <div class="titleCarousel">
-          <h1 class="display-4" style="font-weight: 600">Hacé crecer tu capital<br> con rentabilidad asegurada</h1>
-          <h1 class="mb-md-5 mb-sm-3" style="font-weight: 600">Hasta 10% anual</h1>
+          <h1 class="display-4">Hacé crecer tu capital<br> con rentabilidad asegurada</h1>
+          <h1 class="mb-md-5 mb-sm-3">Hasta 10% anual</h1>
           <a href="#" class="btn btn-primary">Conocer más</a>
         </div>
       </div>
       <div class="item">
-        <img src="assets/images/banner-ganado.jpg" alt="Larrarte" class="w-100%">
+        <img src="assets/images/header.png" alt="Larrarte" class="w-100%">
         <div class="titleCarousel">
-          <h1 class="display-4" style="font-weight: 600">Hacé crecer tu capital<br> con rentabilidad asegurada</h1>
-          <h1 class="mb-md-5 mb-sm-3" style="font-weight: 600">Hasta 10% anual</h1>
+          <h1 class="display-4">Hacé crecer tu capital<br> con rentabilidad asegurada</h1>
+          <h1 class="mb-md-5 mb-sm-3">Hasta 10% anual</h1>
           <a href="#" class="btn btn-primary">Conocer más</a>
         </div>
       </div>
@@ -81,7 +123,7 @@
     <div class="container">
       <div class="row">
         <div class="col-12">
-          <img src="assets/images/group-larrarte.png" alt="Larrarte">
+          <img src="assets/images/group-larrarte.svg" alt="Larrarte">
           <h2 class="mt-5 mb-3" style="font-weight: 700">Potenciando al inversor uruguayo desde 1995</h2>
           <h5 style="font-weight: 400">Grupo Larrarte es una empresa dedicada a la Administración de fondos de Inversión y Capitales en <br class="d-none d-lg-block">general con más de 25 años de experiencia en el mercado. Ofrecemos soluciones a pequeños, medianos<br class="d-none d-lg-block"> y grandes inversores para diversificar y hacer crecer su capital a través de mecanismos de inversión <br class="d-none d-lg-block">sólidos, transparentes y seguros.</h5>
         </div>
@@ -94,27 +136,27 @@
         <div class="col-12">
           <div class="gif">
             <div class="item">
-              <img src="assets/images/farm.svg" alt="Larrarte">
+              <img src="assets/images/certificacion.svg" alt="Larrarte" class="certificacion">
               <h4>25 años <br>de experiencia</h4>
             </div>
             <div class="item">
-              <img src="assets/images/investors.svg" alt="Larrarte">
+              <img src="assets/images/acuerdo.svg" alt="Larrarte" class="acuerdo">
               <h4>Más de 1.000 <br>inversores</h4>
             </div>
             <div class="item">
-              <img src="assets/images/farm.svg" alt="Larrarte">
+              <img src="assets/images/granero.svg" alt="Larrarte" class="granero">
               <h4>3 cabañas <br>propias</h4>
             </div>
             <div class="item">
-              <img src="assets/images/vaadin.svg" alt="Larrarte">
+              <img src="assets/images/bosque1.svg" alt="Larrarte" class="bosque1">
               <h4>25.000 hás <br>de producción</h4>
             </div>
             <div class="item">
-              <img src="assets/images/vaadin.svg" alt="Larrarte">
+              <img src="assets/images/vaca.svg" alt="Larrarte" class="vaca">
               <h4>+20.000 cabezas <br>de Brangus</h4>
             </div>
             <div class="item">
-              <img src="assets/images/vaadin.svg" alt="Larrarte">
+              <img src="assets/images/Outline.svg" alt="Larrarte" class="Outline">
               <h4>+15.000 cabezas <br>de Texel</h4>
             </div>
           </div>
@@ -163,22 +205,23 @@
     </div>
   </section>
   <section id="managementI">
-    <div class="container">
+<!--     <img src="assets/images/fondo.jpg" alt="Larrarte"> -->
+    <div class="container c-management">
       <div class="row">
         <div class="col-12 managementI">
           <h3>Otros negocios</h3>
           <h1 class="display-6">Gestión de Negocios Ganaderos</h1>
           <div class="giftransparent">
             <div class="ranchers">
-              <img src="assets/images/administracion.svg" alt="Larrarte">
+              <img src="assets/images/barras.svg" alt="Larrarte">
               <h4>Administración</h4>
             </div>
             <div class="ranchers">
-              <img src="assets/images/remate.svg" alt="Larrarte">
+              <img src="assets/images/martillo.svg" alt="Larrarte">
               <h4>Remates</h4>
             </div>
             <div class="ranchers">
-              <img src="assets/images/inmobiliaria.svg" alt="Larrarte">
+              <img src="assets/images/for-sale.svg" alt="Larrarte">
               <h4>Inmobiliaria Agro</h4>
             </div>
           </div>
@@ -187,88 +230,9 @@
     </div>
     <a href="#" class="btn btn-primary">Conocer más</a>
   </section>
-  <section id="managementII">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-7 col-12 textm">
-          <h1>Estás a un paso de tener tu plan <br class="d-none d-lg-block">de inversión segura y diversificada.</h1>
-          <h4>Diseñado a medida de tus necesidades</h4>
-        </div>
-        <div class="col-md-6 col-12">
-          <img src="assets/images/inversion.png" alt="Larrarte">
-        </div>
-      </div>
-    </div>
-  </section>
-  <section id="contact">
-    <div class="container">
-      <div class="row">
-        <div class="col-12 contact-center">
-          <h2 class="mb-5">¡Contactanos ahora!</h2>
-          <div class="contactForm">
-            <form id="contactForm" novalidate>
-              <div class="form-floating">
-                <input type="text" class="form-control" placeholder="Nombre" name="name" required>
-                <label for="name">Nombre*</label>
-              </div>
-              <div class="form-floating">
-                <input type="email" class="form-control" placeholder="Email" name="email" required>
-                <label for="email">Email*</label>
-              </div>
-              <div class="form-floating">
-                <input type="tel" class="form-control" placeholder="Telefono" name="phone" required>
-                <label for="name">Telefono*</label>
-              </div>
-              <div class="form-floating">
-                <textarea class="form-control" name="consult" style="height: 110px" placeholder="Consulta" required></textarea>
-                <label for="consult">Consulta*</label>
-              </div>
-
-            </form>
-          </div>
-          <a class="btn btn-primary mt-5" type="submit" onclick="submited()">Enviar</a>
-          <div id="formSending" style="display: none;">
-            <p class="strong">
-              Enviando
-              <span></span>
-              <span></span>
-              <span></span>
-            </p>
-          </div>
-          <div id="formSuccess" style="display: none;">
-            <p class="strong">¡Consulta Enviada!</p>
-          </div>
-          <div id="formError" style="display: none;">
-            <p class="strong">¡Error en el envio de su consulta.<br>Por favor intentar mas tarde!</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <footer>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-4 col-12 contact1">
-          <h5 class="mb-1">Oficinas</h5>
-          <div class="line"></div>
-          <h5 class="mb-4">MONTEVIDEO<br> Coronel Brandzen 1956. Of. 505.</h5>
-          <h5> TACUAREMBÓ<br> Lorem Ipsum 1234</h5>
-        </div>
-        <div class="col-md-4 col-12 contact2">
-          <h5 class="mb-1">Contacto</h5>
-          <div class="line"></div>
-          <h5 class="mb-3"><a href="#" target="_blank" onclick='return false'><img src="assets/images/email.svg" alt="Email" class="ifooter2">gestionlarrarte@gmail.com</a></h5>
-          <h5 class="mb-3"><a href="#" target="_blank" onclick='return false'><img src="assets/images/phone.svg" alt="Telephone" class="ifooter2">2407 0035</a></h5>
-          <h5 class="mb-3"><a href="#" target="_blank" onclick='return false'><img src="assets/images/mobile.svg" alt="Mobil" class="ifooter2">099 545 787</a></h5>
-        </div>
-        <div class="col-md-4 col-12 contact3">
-          <img src="assets/images/group-footer.png" alt="Larrarte" class="logo"><br>
-          <a href="#" target="_blank" onclick='return false' ><img src="assets/images/facebook.svg" alt="Facebook" class="ifooter3"></a>
-          <a href="#" target="_blank" onclick='return false'><img src="assets/images/instagram.svg" alt="Instagram" class="ifooter3"></a>
-        </div>
-      </div>
-    </div>
-  </footer>
+  <section id="managementII"></section>
+  <section id="contact"></section>
+  <footer id="footer"></footer>
 <script type="text/javascript" src="assets/lib/jquery.min.js"></script>
 <script type="text/javascript" src="assets/lib/bootstrap/bootstrap.bundle.min.js"></script>
 <script type="text/javascript" src="assets/lib/owl-carousel/owl-carousel.min.js"></script>
