1929 01112021 menu-mega II

--- a/index.html
+++ b/index.html
@@ -21,15 +21,12 @@
         <div class="col-12 col-nav">
           <nav class="navbar navbar-expand-lg navbar-light">
             <a class="navbar-brand" href="#"><img src="assets/images/Component2.svg" alt="Larrarte"></a>
-            <div class="left">
-
-              <div class="right">
+  <!--           <div class="left"> -->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                  <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-
+                  <ul class="navbar-nav mb-2 mb-lg-0">
                     <li class="nav-item dropdown">
                       <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Inversiones</a>
                       <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -84,8 +81,7 @@
                     </li>
                   </ul>
                 </div>
-              </div>
-            </div>
+           <!--    </div> -->
           </nav>
         </div>
       </div>
