--- a/PGA.html
+++ b/PGA.html
@@ -21,7 +21,7 @@
       <div class="row">
         <div class="col-12">
           <h1>Programa Ganadero Artigas</h1>
-          <h1 class="display-4"><strong>Una forma segura de <br class="d-none d-md-block">invertir</strong></h1>
+          <h1 class="display-4" style="font-weight: bold">Una forma segura de <br class="d-none d-md-block">invertir</h1>
         </div>
       </div>
     </div>
