--- a/PGA.html
+++ b/PGA.html
@@ -32,10 +32,12 @@
         <div class="col-12">
           <h5 class="mb-5 text-center">Nuestro Programa Ganadero Artigas se encuentra activo desde 2016, formando núcleos de pequeños, medianos y grandes inversores y ahorristas que buscan generar una renta fija y segura con su capital. Actualmente contamos con más de 1.000 inversores nacionales y extranjeros y más de 25.000 hectáreas de producción en Tacuarembó, Artigas, Rivera y Salto.</h5>
         </div>
+      </div>
+      <div class="row" id="carouselcard">  
 <!-- <div class="owl-carousel owl-theme owl"> -->
-        <div class="col-lg-3 col-left item">
+        <div class="col-lg-3 col-left item pe-sm-0">
 
-            <div class="card" style="width: 18rem;">
+            <div class="card">
               <ul class="list-group list-group-flush">
                 <li class="list-group-item list1">
                   <div class="img-list">
@@ -74,7 +76,7 @@
             <h6 style="color: #373948; font-weight: 700">Todas las categorías cuentan con una <br>disponibilidad total de la inversión</h6>
           </div>
 
-        <div class="col-lg-3 col-right item">
+        <div class="col-lg-3 col-right item ps-sm-0">
           <div class="card" style="text-align: center;">
             <div class="card-header" style="background-color: #0B422F">
               <h4 style="color: #FFFFFF">Categoría<br>Cría</h4>
