--- a/Negocios.html
+++ b/Negocios.html
@@ -22,7 +22,7 @@
     <div class="container">
       <div class="row">
         <div class="col-12">
-          <h1>Negocios Forestales</h1>
+          <h1 class="display-4">Negocios Forestales</h1>
           <h1>para producción de celulosa</h1>
         </div>
       </div>
